--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,10 @@
     background-color: #24252A;
 }
 
-li, a, button {
+li, a, button, h1, h2, h3, p {
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 18px;
     color: #edf0f1;
     text-decoration: none;
 }
@@ -20,6 +20,10 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
+}
+
+header h1 {
+    font-size: 32px;
 }
 
 .logo {
