--- a/css/about.css
+++ b/css/about.css
@@ -1,109 +1,89 @@
-.about-container {
-    margin: 20px;
+
+html, body, main {
+    height: 100%;
+}
+
+main {
     display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 0.75fr;
     gap: 10px;
-    grid-template-columns: auto auto auto;
-    /* grid-template-rows: auto auto auto auto auto auto auto auto auto auto auto; */
-    grid-template-rows: auto;
+    margin: 0 10px 10px 10px;
 }
 
-.about-container h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    font-size: 1.5rem;
-    color: #edf0f1;
+main div {
+    border: 1px solid #edf0f1;
+    border-radius: 30px;
+    padding: 10px;
 }
 
-.about-container p {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    font-size: 1rem;
-    color: #edf0f1;
+div h1 {
+    font-size: 24px;
+    padding-left: 10px;
 }
 
-.About-Start {
-    grid-column: 1/3;
+ul {
+    padding-top: 5px;
+    padding-left: 15px
+}
+
+img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+}
+
+.what {
+    grid-column: 1;
     grid-row: 1;
-    border-top: 1px solid #edf0f1;
-    border-left: 1px solid #edf0f1;
+
+    border: none;
 }
 
-.image1 {
-    grid-column: 3/4;
-    grid-row: 1;
-}
-
-.image1 img {
-    width: 90%;
-}
-
-div h1,
-div p,
-div ul li{
+.what p {
     padding-top: 10px;
 }
 
-div p,
-div ul,
-div a{
-    margin-left: 30px;
+.what h1 {
+    padding-left: 0px;
 }
 
-table {
-    border: 1px solid #edf0f1;
-    border-collapse: collapse;
-    width: 100%;
-}
-
-th, td {
-    border: 1px solid #edf0f1;
-    text-align: center;
-    color: #edf0f1;
+.image {
+    grid-column: 2;
+    grid-row: 1/3;
+    background-color: #FFFFFF;
 }
 
 .clouds {
-    grid-column: 2/4;
+    grid-column: 1;
     grid-row: 2;
-
-    border-top: 1px solid #edf0f1;
-    border-right: 1px solid #edf0f1;
 }
 
-.uses {
-    grid-column: 1/3;
+.pros {
+    grid-column: 1;
     grid-row: 3;
 }
 
-.pros-cons {
-    grid-column: 1/4;
+.cons {
+    grid-column: 2;
+    grid-row: 3;
+}
+
+.services {
+    grid-column: 1/3;
     grid-row: 4;
+
+    max-height: 90px;
 }
 
-.Types {
-    grid-column: 1/3;
-    grid-row: 5;
+.services div {
+    display: flex;
+    justify-content: space-between;
+
+    border: none;
 }
 
-div a:hover {
+a:hover {
     color: #0088A9;
-}
-
-.IaaS {
-    grid-row: 6;
-    grid-column: 1/3;
-}
-
-.PaaS {
-    grid-row:7;
-    grid-column: 1/3;
-}
-
-.SaaS {
-    grid-row: 8;
-    grid-column: 1/3;
-}
-
-.ServComp {
-    grid-row: 9;
-    grid-column: 1/3;
 }
